# itsf-playerdb

./: .env  BUILDING.txt  Cargo.toml  README.md  TODO.txt  twitch.code-workspace
html/: comments.html  players.html  start.html  style.css  updates.html
migrations/2022-05-26-140636_create_players/: down.sql  up.sql
migrations/2022-05-28-094944_create_itsf_rankings/: down.sql  up.sql
migrations/2022-06-04-210842_create_dtfb_infos/: down.sql  up.sql
migrations/2022-06-17-102411_create_players/: down.sql  up.sql
scrapers/: Cargo.toml
scrapers/src/: download.rs  itsf_rankings.rs  main.rs
server/: .env  Cargo.toml
server/migrations/2022-05-26-140636_create_players/: down.sql  up.sql
server/migrations/2022-05-28-094944_create_itsf_rankings/: down.sql  up.sql
server/src/: background.rs  json.rs  main.rs  models.rs  queries.rs  schema.rs
server/src/scraping/: itsf_rankings.rs  mod.rs  players.rs
src/: background.rs  json.rs  main.rs  models.rs  queries.rs  schema.rs
src/data/: db.rs  dtfb.rs  itsf.rs  mod.rs
src/scraping/: download.rs  dtfb_players.rs  itsf_rankings.rs  mod.rs  players.rs
