[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
actix-web = "4.0.0"
actix-web-httpauth = "0.6.0"
chrono = { version = "^0", features = ["serde"] }
diesel = { version = "2.0.0-rc.0", features = ["sqlite", "r2d2", "chrono"], git = "https://github.com/diesel-rs/diesel" }
diesel_migrations = { version = "2.0.0-rc.0", git = "https://github.com/diesel-rs/diesel/"}
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
libsqlite3-sys = { version = "0.24.2", features = ["bundled"] }
log = "0.4.17"
num_enum = "0.5.7"
reqwest = { version = "0.11.10", features = [ "cookies" ] }
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "^1.0"
