[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-web-httpauth = "0.6.0"
env_logger = "0.9.0"
log = "0.4.17"
maud = "0.23.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "^0"
chrono = "^0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_enum = "0.5.7"
reqwest = "0.11.10"
scraper = "0.13.0"
tokio = "^1.0"